tests/paczka1/small_fuzzy/42180723.err
Error in line 5: 9cws A877 99,7
Error in line 12: d65wwbS S48 23,5
Error in line 14: d65wwbS A877 43,5
Error in line 10: rFhbJNB A877 1,6
